--- a/requirements.txt
+++ b/requirements.txt
@@ -19,11 +19,11 @@ packaging==24.0
 pluggy==1.5.0
 py==1.11.0
 pycodestyle==2.9.1
-pyflakes==2.5.0
-pytest==7.1.3
-pytest-env==0.6.2
-python-dateutil==2.8.2
-python-dotenv==1.0.0
+pyflakes==3.2.0
+pytest==8.2.2
+pytest-env==1.1.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 six==1.16.0
 SQLAlchemy==2.0.21
 tomli==2.0.1
